19.4
- codegen: multi-or
- libnumfile
- valstr "complainer" parameter

19.3
- dismountable lookup view
- wss proto split
- strict mode cleanup

19.2
- Callouts

19.1
- FaultException and fault traps

19.0
- redis channel split
- ctrl+shift+r to refresh tab, ctrl+shift+4 to close tab
- ip alias mapping
- multi-window popout

18.9
- tab docking
- webauth Firefox fix
- tab shrinking

18.8
- report bookmark bingo mode, share mode, gs containment

*18.7
- webauthn support for EC and RSA devices

*18.6
- wss.js changed to use WSS 1.6. patch ws_js.php and icl/reauth.inc.php

18.5
- codegen: clickhouse faceted nav w/ pivot table

*18.4
- dark mode

*18.3
- non-numeric record IDs
- ClickHouse support

18.2
- gamepad controls

18.1
- auto saver
- lookupentity using POST for textarea
- oninput in addition to onchange to instantly trigger tabchanged event

18.0
- encdec remote mode change

17.9
- WSS Server (using Redis)

*17.8
- WSSS server (settings in lb.php, patch forminput.php)
- refresh.php for clearing cache

*17.7
- encdec remote mode

*17.6
- entity-specific table namespace
- codegen: vendor portal

17.5
- diff logging
- home dash reports


*17.4
- MS Graph integration

17.3
- updated postgre connector (sql.php.pg)
- added pastetotextarea function to autocomplete.js

17.2
- codegen: bubble chart

*17.1
- gsx/multi-core support

17.0
- sql readonly mode
- high res sprites and split desktop/mobile HD promote styles
- codegen: faceted nav charts


16.9
- prominent display of "add to home screen" button if the app can be, but not yet added
- cert vital monitoring utility
- gsguard cache
- codegen: faceted nav 1-N count fix

*16.8
- offline mode and contextual clipboard

16.7
- auto dismissal of mini lookup views
- enforcing secure cookies ($usehttps in lb.php)
- $usehttps falls back to 0 when in dev/exemption mode

16.6
- retro browser compatibility
- pullupeditor for richtext editors
- collapsable section header style
- animated tab bookmark scrolling (gutter navigation)